force-app/main/default/objects/Ligne__c/Ligne__c.object-meta.xml
<CustomObject>
    <label>Ligne</label>
    <nameField>
        <displayFormat>{DD}-{MM}-{YYYY}-L{0}</displayFormat>
        <label>N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>