force-app/main/default/objects/Ligne__c/fields/Accastillage__c.field-meta.xml
<CustomField>
    <fullName>Accastillage__c</fullName>
    <label>Accastillage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilier standard fourni par le dentiste</fullName>
            </value>
            <value>
                <fullName>Pilier calcinable fourni par le dentiste</fullName>
            </value>
            <value>
                <fullName>Pilier à fournir par le laboratoire</fullName>
            </value>
            <value>
                <fullName>Pilier à commander par le laboratoire</fullName>
            </value>
            <value>
                <fullName>Barre titane usinée</fullName>
            </value>
            <value>
                <fullName>Barre titane usinée (CAD/CAM)</fullName>
            </value>
            <value>
                <fullName>Barre coulée CrCo</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>