force-app/main/default/objects/Ligne__c/fields/Alliage__c.field-meta.xml
<CustomField>
    <fullName>Alliage__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Couronne_sur_implants&quot;,&quot;CoCr&quot;,&quot;Inlay_core_couronne&quot;,&quot;CoCr&quot;,&quot;&quot;)</defaultValue>
    <label>Alliage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Couronne__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Alliages</valueSetName>
    </valueSet>
</CustomField>