force-app/main/default/objects/Ligne__c/fields/Alliage_Inlay_core__c.field-meta.xml
<CustomField>
    <fullName>Alliage_Inlay_core__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Inlay_core_couronne&quot;,&quot;CoCr&quot;,&quot;&quot;)</defaultValue>
    <label>Alliage Inlay core</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alliages</valueSetName>
    </valueSet>
</CustomField>