force-app/main/default/objects/Ligne__c/fields/Arcade__c.field-meta.xml
<CustomField>
    <fullName>Arcade__c</fullName>
    <label>Arcade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Haut</fullName>
            </value>
            <value>
                <fullName>Bas</fullName>
            </value>
            <value>
                <fullName>Haut et bas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>