force-app/main/default/objects/Ligne__c/fields/Attachement__c.field-meta.xml
<CustomField>
    <fullName>Attachement__c</fullName>
    <label>Attachement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pose partie mâle</fullName>
            </value>
            <value>
                <fullName>Pose partie femelle</fullName>
            </value>
            <value>
                <fullName>Pose partie mâle et femelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>