force-app/main/default/objects/Ligne__c/fields/Bandeau_m_tallique__c.field-meta.xml
<CustomField>
    <fullName>Bandeau_m_tallique__c</fullName>
    <label>Bandeau métallique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>