force-app/main/default/objects/Ligne__c/fields/cb_Dent_massive_ou_contreplaquee__c.field-meta.xml
<CustomField>
    <fullName>cb_Dent_massive_ou_contreplaquee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dent massive ou contreplaquée</label>
    <type>Checkbox</type>
</CustomField>