force-app/main/default/objects/Ligne__c/fields/cbCrochet_Acetal__c.field-meta.xml
<CustomField>
    <fullName>cbCrochet_Acetal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet Acetal</label>
    <type>Checkbox</type>
</CustomField>