force-app/main/default/objects/Ligne__c/fields/cbCrochet_flexible__c.field-meta.xml
<CustomField>
    <fullName>cbCrochet_flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet flexible</label>
    <type>Checkbox</type>
</CustomField>