force-app/main/default/objects/Ligne__c/fields/cbCrochet_transparent__c.field-meta.xml
<CustomField>
    <fullName>cbCrochet_transparent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet transparent</label>
    <type>Checkbox</type>
</CustomField>