force-app/main/default/objects/Ligne__c/fields/Cnt2__c.field-meta.xml
<CustomField>
    <fullName>Cnt2__c</fullName>
    <label>Cnt2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>