force-app/main/default/objects/Ligne__c/fields/Couronne__c.field-meta.xml
<CustomField>
    <fullName>Couronne__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Couronne_sur_implants&quot;,&quot;CCM : Céramo-métallique&quot;,&quot;Inlay_core_couronne&quot;,&quot;CCM : Céramo-métallique&quot;,&quot;&quot;)</defaultValue>
    <label>Couronne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Couronne</valueSetName>
    </valueSet>
</CustomField>