force-app/main/default/objects/Ligne__c/fields/Crochet_Acetal__c.field-meta.xml
<CustomField>
    <fullName>Crochet_Acetal__c</fullName>
    <label>Crochet Acetal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>cbCrochet_Acetal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>