force-app/main/default/objects/Ligne__c/fields/Crochet_flexible__c.field-meta.xml
<CustomField>
    <fullName>Crochet_flexible__c</fullName>
    <label>Crochet flexible</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>cbCrochet_flexible__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>