force-app/main/default/objects/Ligne__c/fields/Crochet_transparent__c.field-meta.xml
<CustomField>
    <fullName>Crochet_transparent__c</fullName>
    <label>Crochet transparent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>cbCrochet_transparent__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>