force-app/main/default/objects/Ligne__c/fields/D_tail_de_la_commande__c.field-meta.xml
<CustomField>
    <fullName>D_tail_de_la_commande__c</fullName>
    <label>Détail de la commande</label>
    <type>TextArea</type>
</CustomField>