force-app/main/default/objects/Ligne__c/fields/Dent_massive_ou_contreplaqu_e__c.field-meta.xml
<CustomField>
    <fullName>Dent_massive_ou_contreplaqu_e__c</fullName>
    <label>Dent massive ou contreplaquée</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>cb_Dent_massive_ou_contreplaquee__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>