force-app/main/default/objects/Ligne__c/fields/Dents2__c.field-meta.xml
<CustomField>
    <fullName>Dents2__c</fullName>
    <label>Dents2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>