force-app/main/default/objects/Ligne__c/fields/Dents__c.field-meta.xml
<CustomField>
    <fullName>Dents__c</fullName>
    <label>Dents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>