force-app/main/default/objects/Ligne__c/fields/Dents_a_extraire__c.field-meta.xml
<CustomField>
    <fullName>Dents_a_extraire__c</fullName>
    <label>Dents à extraire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Extraction__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>