force-app/main/default/objects/Ligne__c/fields/Dents_a_restorer__c.field-meta.xml
<CustomField>
    <fullName>Dents_a_restorer__c</fullName>
    <label>Dents à restorer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>