force-app/main/default/objects/Ligne__c/fields/Dep2__c.field-meta.xml
<CustomField>
    <fullName>Dep2__c</fullName>
    <label>Dep2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>