force-app/main/default/objects/Ligne__c/fields/Diam_tre__c.field-meta.xml
<CustomField>
    <fullName>Diam_tre__c</fullName>
    <label>Diamètre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>