force-app/main/default/objects/Ligne__c/fields/Embrasure__c.field-meta.xml
<CustomField>
    <fullName>Embrasure__c</fullName>
    <label>Embrasure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>