force-app/main/default/objects/Ligne__c/fields/En_cours_de_creation__c.field-meta.xml
<CustomField>
    <fullName>En_cours_de_creation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>En cours de création</label>
    <type>Checkbox</type>
</CustomField>