force-app/main/default/objects/Ligne__c/fields/Extraction__c.field-meta.xml
<CustomField>
    <fullName>Extraction__c</fullName>
    <label>Extraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ne rien extraire</fullName>
            </value>
            <value>
                <fullName>Extraire</fullName>
                <default>true</default>
                <label>Extraire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>