force-app/main/default/objects/Ligne__c/fields/Finition__c.field-meta.xml
<CustomField>
    <fullName>Finition__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Facette&quot;,&quot;Finition directe&quot;,&quot;Inlay_core_couronne&quot;,&quot;Finition directe&quot;,&quot;Stellite&quot;,&quot;Finition directe&quot;,&quot;Resine&quot;,&quot;Finition directe&quot;,&quot;Inlay_onlay&quot;,&quot;Finition directe&quot;,&quot;ResineSansAffectation&quot;,&quot;Finition directe&quot;,&quot;Planification_implantaire&quot;,&quot;Planification implantaire et impression du guide&quot;,&quot;&quot;)</defaultValue>
    <label>Finition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Finition</valueSetName>
    </valueSet>
</CustomField>