force-app/main/default/objects/Ligne__c/fields/Inlay_core__c.field-meta.xml
<CustomField>
    <fullName>Inlay_core__c</fullName>
    <label>Inlay core</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dents</valueSetName>
    </valueSet>
</CustomField>