force-app/main/default/objects/Ligne__c/fields/IsGouttiere__c.field-meta.xml
<CustomField>
    <fullName>IsGouttiere__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Gouttiere&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGouttiere</label>
    <type>Checkbox</type>
</CustomField>