force-app/main/default/objects/Ligne__c/fields/IsICC__c.field-meta.xml
<CustomField>
    <fullName>IsICC__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Inlay_core_couronne&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsICC</label>
    <type>Checkbox</type>
</CustomField>