force-app/main/default/objects/Ligne__c/fields/Liaison__c.field-meta.xml
<CustomField>
    <fullName>Liaison__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Inlay_core_couronne&quot;,&quot;Unitaire&quot;,&quot;Resine&quot;,&quot;Résine standard&quot;,&quot;Planification_implantaire&quot;,&quot;Dentaire&quot;,&quot;&quot;)</defaultValue>
    <label>Liaison</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unitaire</fullName>
            </value>
            <value>
                <fullName>Solidarisé</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>Appui dentaire</fullName>
            </value>
            <value>
                <fullName>Résine standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>