force-app/main/default/objects/Ligne__c/fields/LibArcades__c.field-meta.xml
<CustomField>
    <fullName>LibArcades__c</fullName>
    <label>LibArcades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>