force-app/main/default/objects/Ligne__c/fields/LibCnt2__c.field-meta.xml
<CustomField>
    <fullName>LibCnt2__c</fullName>
    <label>LibCnt2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>