force-app/main/default/objects/Ligne__c/fields/LibDents1__c.field-meta.xml
<CustomField>
    <fullName>LibDents1__c</fullName>
    <label>LibDents1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>