force-app/main/default/objects/Ligne__c/fields/LibDents2__c.field-meta.xml
<CustomField>
    <fullName>LibDents2__c</fullName>
    <label>LibDents2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>