force-app/main/default/objects/Ligne__c/fields/LibDep2__c.field-meta.xml
<CustomField>
    <fullName>LibDep2__c</fullName>
    <label>LibDep2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>