force-app/main/default/objects/Ligne__c/fields/LibFinition__c.field-meta.xml
<CustomField>
    <fullName>LibFinition__c</fullName>
    <label>LibFinition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>