force-app/main/default/objects/Ligne__c/fields/LibHaut__c.field-meta.xml
<CustomField>
    <fullName>LibHaut__c</fullName>
    <label>LibHaut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>