force-app/main/default/objects/Ligne__c/fields/LibSsType1__c.field-meta.xml
<CustomField>
    <fullName>LibSsType1__c</fullName>
    <label>LibSsType1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>