force-app/main/default/objects/Ligne__c/fields/LibTravaux1__c.field-meta.xml
<CustomField>
    <fullName>LibTravaux1__c</fullName>
    <label>LibTravaux1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>