force-app/main/default/objects/Ligne__c/fields/LibTravaux2__c.field-meta.xml
<CustomField>
    <fullName>LibTravaux2__c</fullName>
    <label>LibTravaux2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>