force-app/main/default/objects/Ligne__c/fields/LibType1__c.field-meta.xml
<CustomField>
    <fullName>LibType1__c</fullName>
    <label>LibType1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>