force-app/main/default/objects/Ligne__c/fields/Liste_des_dents_2__c.field-meta.xml
<CustomField>
    <fullName>Liste_des_dents_2__c</fullName>
    <formula>IF(INCLUDES( Dents2__c, &quot;11&quot;), &quot;11 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;12&quot;), &quot;12 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;13&quot;), &quot;13 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;14&quot;), &quot;14 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;15&quot;), &quot;15 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;16&quot;), &quot;16 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;17&quot;), &quot;17 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;18&quot;), &quot;18 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;21&quot;), &quot;21 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;22&quot;), &quot;22 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;23&quot;), &quot;23 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;24&quot;), &quot;24 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;25&quot;), &quot;25 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;26&quot;), &quot;26 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;27&quot;), &quot;27 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;28&quot;), &quot;28 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;31&quot;), &quot;31 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;32&quot;), &quot;32 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;33&quot;), &quot;33 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;34&quot;), &quot;34 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;35&quot;), &quot;35 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;36&quot;), &quot;36 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;37&quot;), &quot;37 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;38&quot;), &quot;38 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;41&quot;), &quot;41 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;42&quot;), &quot;42 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;43&quot;), &quot;43 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;44&quot;), &quot;44 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;45&quot;), &quot;45 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;46&quot;), &quot;46 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;47&quot;), &quot;47 &quot; , &quot;&quot;) + 
IF(INCLUDES( Dents2__c, &quot;48&quot;), &quot;48 &quot; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liste des dents 2</label>
    <type>Text</type>
</CustomField>