force-app/main/default/objects/Ligne__c/fields/Maquillage__c.field-meta.xml
<CustomField>
    <fullName>Maquillage__c</fullName>
    <label>Maquillage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>