force-app/main/default/objects/Ligne__c/fields/Maquillage_sillon__c.field-meta.xml
<CustomField>
    <fullName>Maquillage_sillon__c</fullName>
    <label>Maquillage sillon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maquillage_sillon</valueSetName>
    </valueSet>
</CustomField>