force-app/main/default/objects/Ligne__c/fields/Marque_d_implant__c.field-meta.xml
<CustomField>
    <fullName>Marque_d_implant__c</fullName>
    <defaultValue>$User.Marque_d_implant__c</defaultValue>
    <label>Marque d’implant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marques_d_implant</valueSetName>
    </valueSet>
</CustomField>