force-app/main/default/objects/Ligne__c/fields/Non_fini__c.field-meta.xml
<CustomField>
    <fullName>Non_fini__c</fullName>
    <formula>NOT(OR(ISBLANK(TEXT(Finition__c)),OR(ISPICKVAL(Finition__c,&quot;Finition&quot;)),OR(ISPICKVAL(Finition__c,&quot;Finition directe&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non fini</label>
    <type>Checkbox</type>
</CustomField>