force-app/main/default/objects/Ligne__c/fields/Occlusion__c.field-meta.xml
<CustomField>
    <fullName>Occlusion__c</fullName>
    <label>Occlusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>