force-app/main/default/objects/Ligne__c/fields/Perforation__c.field-meta.xml
<CustomField>
    <fullName>Perforation__c</fullName>
    <label>Perforation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>