force-app/main/default/objects/Ligne__c/fields/Point_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Point_de_contact__c</fullName>
    <label>Point de contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>