force-app/main/default/objects/Ligne__c/fields/PrefBandeau__c.field-meta.xml
<CustomField>
    <fullName>PrefBandeau__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefBandeau</label>
    <type>Checkbox</type>
</CustomField>