force-app/main/default/objects/Ligne__c/fields/PrefMaquillage__c.field-meta.xml
<CustomField>
    <fullName>PrefMaquillage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefMaquillage</label>
    <type>Checkbox</type>
</CustomField>