force-app/main/default/objects/Ligne__c/fields/PrefOcclusion__c.field-meta.xml
<CustomField>
    <fullName>PrefOcclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefOcclusion</label>
    <type>Checkbox</type>
</CustomField>