force-app/main/default/objects/Ligne__c/fields/PrefPointContact__c.field-meta.xml
<CustomField>
    <fullName>PrefPointContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefPointContact</label>
    <type>Checkbox</type>
</CustomField>