force-app/main/default/objects/Ligne__c/fields/PrefSillon__c.field-meta.xml
<CustomField>
    <fullName>PrefSillon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefSillon</label>
    <type>Checkbox</type>
</CustomField>