force-app/main/default/objects/Ligne__c/fields/PrefTypePreparation__c.field-meta.xml
<CustomField>
    <fullName>PrefTypePreparation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrefTypePreparation</label>
    <type>Checkbox</type>
</CustomField>