force-app/main/default/objects/Ligne__c/fields/Profil_d_mergence__c.field-meta.xml
<CustomField>
    <fullName>Profil_d_mergence__c</fullName>
    <label>Profil d&apos;émergence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>