force-app/main/default/objects/Ligne__c/fields/R_f_rence_d_implant__c.field-meta.xml
<CustomField>
    <fullName>R_f_rence_d_implant__c</fullName>
    <label>Référence d&apos;implant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>