force-app/main/default/objects/Ligne__c/fields/Ref_Diametre__c.field-meta.xml
<CustomField>
    <fullName>Ref_Diametre__c</fullName>
    <label>Ref - Diametre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naturall+ Ø3</fullName>
            </value>
            <value>
                <fullName>Naturall+ Ø4</fullName>
            </value>
            <value>
                <fullName>Naturall+ Ø5</fullName>
            </value>
            <value>
                <fullName>Naturall Ø3.5</fullName>
            </value>
            <value>
                <fullName>Naturall Ø4</fullName>
            </value>
            <value>
                <fullName>Naturall Ø4,5</fullName>
            </value>
            <value>
                <fullName>Naturall Ø5</fullName>
            </value>
            <value>
                <fullName>Naturactis Ø3</fullName>
            </value>
            <value>
                <fullName>Naturactis Ø3.5</fullName>
            </value>
            <value>
                <fullName>Naturactis Ø4</fullName>
            </value>
            <value>
                <fullName>Naturactis Ø4.5</fullName>
            </value>
            <value>
                <fullName>Naturactis Ø5</fullName>
            </value>
            <value>
                <fullName>Natea+ Ø3.6</fullName>
            </value>
            <value>
                <fullName>Natea+ Ø4.1</fullName>
            </value>
            <value>
                <fullName>Natea+ Ø4.8</fullName>
            </value>
            <value>
                <fullName>Natea+ Ø6</fullName>
            </value>
            <value>
                <fullName>Aesthetica+ Ø4.2</fullName>
            </value>
            <value>
                <fullName>Aesthetica+  Ø4.8</fullName>
            </value>
            <value>
                <fullName>Aesthetica+  Ø6.5</fullName>
            </value>
            <value>
                <fullName>Naturall+ Ø3.5</fullName>
            </value>
            <value>
                <fullName>Naturall+ Ø4.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>