force-app/main/default/objects/Ligne__c/fields/Ref_Diametre_BIOTECH__c.field-meta.xml
<CustomField>
    <fullName>Ref_Diametre_BIOTECH__c</fullName>
    <label>Ref - Diametre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>