force-app/main/default/objects/Ligne__c/fields/ShowArcades__c.field-meta.xml
<CustomField>
    <fullName>ShowArcades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowArcades</label>
    <type>Checkbox</type>
</CustomField>