force-app/main/default/objects/Ligne__c/fields/ShowDents__c.field-meta.xml
<CustomField>
    <fullName>ShowDents__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ShowDents</label>
    <type>Checkbox</type>
</CustomField>