force-app/main/default/objects/Ligne__c/fields/ShowOptions__c.field-meta.xml
<CustomField>
    <fullName>ShowOptions__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowOptions</label>
    <type>Checkbox</type>
</CustomField>