force-app/main/default/objects/Ligne__c/fields/Technical_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Comments__c</fullName>
    <label>Technical Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>